# ThreatExchange

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CODEOWNERS  CONTRIBUTING.md  Dockerfile.vpdq  LICENSE  PATENTS  README.md  Sample Signals  Sample Signals_checkpoint  facebook  index.html  lambda-terminal.py  sitemap.xml
hasher-matcher-actioner/: .dockerignore  .gitignore  .terraform.lock.hcl  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  OPENAPI_INTEGRATION.md  PR.md  README.md  ThreatExchangeAPI.Dockerfile  backend.tf.example  docker-compose.yaml  git-split.sh  hma-ui.md  main.tf  mypy.ini  omm_config.py  openapi.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_add_hashes.py  run_api.py  run_fetcher.py  run_hasher.py  run_indexer.py  run_matcher.py  run_models.py  settings.py.example  setup.py  terraform.tfvars.example  variables.tf  version.txt  workspace.code-workspace
hasher-matcher-actioner/.devcontainer/: .gitignore  Dockerfile  bash_aliases  bashrc  devcontainer.json  devcontainer.json.example  omm_config.py  post-create  postcreate.sh  startup.sh  zshrc
hasher-matcher-actioner/config/: uwsgi.ini
hasher-matcher-actioner/diagrams/: deployment-strategy-split-roles.excalidraw  match-request-response-flow.excalidraw
hasher-matcher-actioner/docs/: README.md  api.md  architecture.md  docusaurus.config.js  goals.md  history.md  package-lock.json  package.json  releasing.md  roadmap.md  sidebars.js
hasher-matcher-actioner/example_integrations/: workplace.py
hasher-matcher-actioner/extensions/: README.md
hasher-matcher-actioner/hashing-data/: main.tf  outputs.tf  variables.tf
hasher-matcher-actioner/hma-lite/: API.md  Dockerfile  README.md  Terraform.tf  docker-compose.yml  requirements.txt
hasher-matcher-actioner/hmalib/: aws_secrets.py  common.py  dto.py  models.py
hasher-matcher-actioner/hmalib_extensions/: action_performer_example.py  main.py
hasher-matcher-actioner/lambdas/: Dockerfile  pdq_hasher.py  pdq_indexer.py  pdq_matcher.py  requirements.txt
hasher-matcher-actioner/openapi/: README.md  openapi.json  openapi.yaml
hasher-matcher-actioner/pdq-hasher/: main.tf  outputs.tf  variables.tf
hasher-matcher-actioner/pdq-matcher/: main.tf  outputs.tf  variables.tf
hasher-matcher-actioner/pdq-signals/: main.tf  variables.tf
hasher-matcher-actioner/reference_omm_configs/: development_omm_config.py  json_log_omm_config.py  read_write_split_omm_config.py  scaled_deployment_cron_omm_config.py  scaled_deployment_curator_omm_config.py  scaled_deployment_hasher_omm_config copy.py  scaled_deployment_hasher_omm_config.py  scaled_deployment_matcher_omm_config.py
hasher-matcher-actioner/sample_data/: README.md  copydays-jpg1-pdq-hashes.csv  holidays-jpg1-pdq-hashes.csv  holidays-jpg2-pdq-hashes.csv  pdq.csv  url.csv
hasher-matcher-actioner/scripts/: benchmark_for_match_api.py  create_test_bank.py  db-migrate.sh  dump_openapi.py  gen_fake_cloudwatch_metrics.py  get_auth_token  hma_client_lib.py  hma_script_utils.py  hma_shell  listener.py  migrate.sh  multi_part_pull_request_template  openapi_dump_config.py  populate_config_db  print_hmalib_endpoints.py  repro-leak-linux.sh  repro-leak-netzero-seed.py  script_utils.py  set_tf_outputs_in_local_env.sh  set_threatexchange_source  soak_test_system  storm_images_queue  storm_submissions_api  submit_content_test.py  submit_s3_bucket  submitter.py  update_lambda_docker_image.sh  validate_openapi.py  write_backend_config.sh
hasher-matcher-actioner/terraform/: .terraform.lock.hcl  backend.tf.example  collabs.json  collabs_example.json  main.tf  outputs.tf  populate_config_db.sh  terraform.tfvars.example  variables.tf
hasher-matcher-actioner/tests/: __init__.py  test_metrics_reporter.py  test_models.py  test_sample.py
hasher-matcher-actioner/webapp/: .env.example  .eslintrc.json  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.json
hasher-matcher-actioner/wiki/: Action-Rule-Evaluation.md  Content-Details.md  Content-Submissions-API.md  Creating-and-Managing-Banks.md  Dockerfile  DynamoDB-Design.md  Fetching-data-from-ThreatExchange.md  Glossary.md  Granting-access-to-more-users.md  Home.md  How-does-your-media-flow-through-HMA.md  How-to-Connect-your-s3-Bucket-to-HMA.md  How-to-STOP-HMA.md  How-to-disable-writebacks-to-ThreatExchange.md  Installation.md  Matches-for-Hash-API-(directly-querying-system-indexes).md  Overview.md  README.md  Reporting-Opinions.md  Submit-Content.md  The-Action-Page.md  The-Action-Rules-Page.md  The-Matches-Page.md  ThreatExchange-Settings-Page.md  Tutorial-How-to-Notify-My-System-when-My-Content-Matches-a-Dataset.md  Tutorial-Manually-Submitting-Photos-to-HMA.md  Tutorial-Programmatically-Submitting-Photos-to-HMA.md  Uploading-Your-Own-Datasets.md  User-Authentication.md  Using-cloudwatch-log-insights-with-HMA.md  Webhooks-Reference.md  What-are-the-Different-Ways-that-I-Can-Use-HMA.md  What-does-HMA-do-with-your-media.md  _Sidebar.md  poc-test.md
open-media-match/: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  mypy.ini  omm_config.py  pyproject.toml
open-media-match/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  gunicorn_omm_config.py  omm_config.py  startup.sh
open-media-match/diagrams/: deployment-strategy-redundant-instances.excalidraw  deployment-strategy-single-instance.excalidraw  match-request-response-flow.excalidraw  the-stack.excalidraw
python-threatexchange/: .gitignore  CONTRIBUTING.md  DESCRIPTION.rst  Dockerfile  Makefile  README.md  ROADMAP.md  build.py  mypy.ini  pyproject.toml  pytest.ini  setup.py
python-threatexchange/.devcontainer/: Dockerfile  bashrc  devcontainer.json  post-create  zshrc
python-threatexchange/benchmarks/: README.MD  README.md  benchmark_pdq_faiss_matchers.py  benchmark_vpdq_index.py
vpdq/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  apt-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  vpdq-realese.py  vpdq-release.py
(+1639 files in other folders)
