[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenMediaMatch"
version = "0.0.1"
authors = [
    { name="Meta Platforms, Inc. and affiliates", email="threatexchange@meta.com" },
]
description = "Open Media Match"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask",
    "flask_sqlalchemy",
    "flask_migrate",
    "psycopg2",
    "requests",
    "threatexchange",
]

[project.optional-dependencies]
all = [
    "mypy",
    "black",
    "pytest",
    "types-Flask-Migrate",
    "types-requests",
]

test = [ "pytest" ]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true

[project.urls]
"Homepage" = "https://github.com/facebook/ThreatExchange/"
"Bug Tracker" = "https://github.com/facebook/ThreatExchange/issues"
