[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "threatexchange"
version = "1.2.6"
description = "Python Library for Signal Exchange"
readme = "README.md"
license = { text = "BSD" }
authors = [
    { name = "Facebook", email = "threatexchange@meta.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
]
keywords = ["facebook", "threatexchange", "ncmec", "stopncii", "pdq"]
requires-python = ">=3.8"
dependencies = [
    "python-Levenshtein",
    "requests",
    "urllib3",  # For allow_methods
    "python-dateutil",
    "types-python-dateutil",
    "dacite",
    "Pillow",  # pdq
    "pdqhash",  # pdq
    "faiss-cpu",  # faiss
    "numpy",  # faiss
    "packaging",  # fix ModuleNotFoundError in faiss/loader.py
    "vpdq",
    # Extension dependencies
    "py-tlsh",
    "pdfminer.six",
    "pytesseract",
]
urls = {Homepage = "https://www.github.com/facebook/ThreatExchange"}

[project.optional-dependencies]
# Core development dependencies
dev = [
    "pytest",
    "black",
    "mypy",
    "types-python-dateutil",
    "types-requests",
]
# Minimal test dependencies
test = [
    "pytest",
]
# Minimal lint dependencies
lint = [
    "black",
]
# Minimal type checking dependencies
types = [
    "mypy",
    "types-python-dateutil",
    "types-requests",
]
package = ["wheel"]

[project.scripts]
threatexchange = "threatexchange.cli.main:main"
tx = "threatexchange.cli.main:main"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["threatexchange/extensions/*/requirements.txt"]
# Extensions will be merged into dev group
merge-extras = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["threatexchange"]
include = ["threatexchange/py.typed"]
exclude = ["tests*"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests*",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$' 