[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
    "cython",
    "cmake",
]
build-backend = "setuptools.build_meta"

[project]
name = "vpdq"
authors = [{name = "Meta", email = "threatexchange@meta.com"}]
description = "Python bindings for Facebook VPDQ hash"
requires-python = ">= 3.8"
readme = {file = "python/README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
dynamic = ["version", "scripts", "entry-points"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]  # list of folders that contain the packages (["."] by default)
include = ["vpdq.pyx"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
